Remove wrong --add-reads